[package]
name = "tiny2fa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
hmac-sha1 = "0.2.2"
dirs = "5.0.1"
clap = { version = "4.4.14", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
